# MaidMic

./: .gitignore  GAP_ANALYSIS.md  LICENSE  README.md  STATUS.md
.github/workflows/: build-apk.yml
maidmic-app/: build.gradle.kts  gradle.properties  settings.gradle.kts
maidmic-app/app/: build.gradle.kts  debug.keystore  proguard-rules.pro
maidmic-app/app/src/main/: AndroidManifest.xml
maidmic-app/app/src/main/cpp/: maidmic_jni.cpp
maidmic-app/app/src/main/java/aoeck/dwyai/com/: AudioLoopback.kt  DebugLogger.kt  MaidMicApp.kt  MaidMicKeepAliveService.kt  MainActivity.kt  NativeAudioProcessor.kt  ShizukuStatus.kt
maidmic-app/app/src/main/java/aoeck/dwyai/com/audio/: AudioRouter.kt  AudioSink.kt  AudioSource.kt  MicSource.kt  SpeakerSink.kt
maidmic-app/app/src/main/java/aoeck/dwyai/com/bridge/accessibility/: AccessibilityMicBridge.kt
maidmic-app/app/src/main/java/aoeck/dwyai/com/bridge/root/: RootMicBridge.kt  RootMicService.kt
maidmic-app/app/src/main/java/aoeck/dwyai/com/bridge/shizuku/: ShizukuMicBridge.kt  ShizukuMicService.kt
maidmic-app/app/src/main/java/aoeck/dwyai/com/plugins/lua/: LuaPluginSandbox.kt
maidmic-app/app/src/main/java/aoeck/dwyai/com/streaming/: ConnectionManager.kt  MicMode.kt  QRCodeUtil.kt  StreamingSink.kt  StreamingSource.kt  TransportType.kt
maidmic-app/app/src/main/java/aoeck/dwyai/com/ui/: CreditsPage.kt
maidmic-app/app/src/main/java/aoeck/dwyai/com/ui/editor/: ModuleChainEditor.kt
maidmic-app/app/src/main/java/com/maidmic/: MaidMicApp.kt  MainActivity.kt
maidmic-app/app/src/main/java/com/maidmic/bridge/accessibility/: AccessibilityMicBridge.kt
maidmic-app/app/src/main/java/com/maidmic/bridge/root/: RootMicBridge.kt  RootMicService.kt
maidmic-app/app/src/main/java/com/maidmic/bridge/shizuku/: ShizukuMicBridge.kt  ShizukuMicService.kt
maidmic-app/app/src/main/java/com/maidmic/plugins/lua/: LuaPluginSandbox.kt
maidmic-app/app/src/main/java/com/maidmic/ui/editor/: ModuleChainEditor.kt
maidmic-app/app/src/main/java/com/maidmic/ui/plugins/: PluginMarketPage.kt
maidmic-app/app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
maidmic-app/app/src/main/res/values/: strings.xml  themes.xml
maidmic-app/app/src/main/res/xml/: accessibility_service_config.xml  network_security_config.xml
maidmic-engine/: CMakeLists.txt
maidmic-engine/include/maidmic/: module.h  pipeline.h  types.h
maidmic-engine/src/api/: maidmic_api.c  maidmic_jni.cpp
maidmic-engine/src/core/: pipeline.c  ring_buffer.c
maidmic-engine/src/dsp/: gain.c
maidmic-p2p/: go.mod
maidmic-p2p/pkg/dht/: dht.go
maidmic-p2p/pkg/index/: index.go
maidmic-p2p/pkg/transfer/: transfer.go
(+3 files in other folders)
